--- a/package.json
+++ b/package.json
@@ -81,6 +81,7 @@
     "karma-sourcemap-loader": "^0.3.6",
     "lodash": "^3.10.1",
     "madge": "0.5.0",
+    "markdown-doctest": "^0.8.1",
     "merge": "^1.2.0",
     "merge2": "^0.3.5",
     "minimatch": "^3.0.0",
